多商店支持上传应用（全量和分阶段）V1.0-vivo,oppo